--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Form Data Saver",
   "version": "1.0",
   "permissions": ["storage", "activeTab", "declarativeContent"],
   "background": {
-    "scripts": ["background.js"],
-    "persistent": false
+    "service_worker": "background.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "icon16.png",
       "48": "icon48.png",
